--- a/docker/services/frontend/html/workplace-journal.html
+++ b/docker/services/frontend/html/workplace-journal.html
@@ -355,25 +355,40 @@
         }
 
         /* Pagination */
+        .pagination-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 1.5rem;
+            padding-top: 1rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        .pagination-info {
+            color: #94a3b8;
+            font-size: 0.85rem;
+        }
+
         .pagination {
             display: flex;
-            justify-content: center;
             align-items: center;
-            gap: 0.5rem;
-            margin-top: 1.5rem;
+            gap: 0.25rem;
         }
 
         .pagination button {
-            padding: 0.5rem 0.75rem;
+            padding: 0.4rem 0.6rem;
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 4px;
             color: #e8e8e8;
             cursor: pointer;
             font-size: 0.85rem;
+            min-width: 36px;
         }
 
-        .pagination button:hover:not(:disabled) {
+        .pagination button:hover:not(:disabled):not(.active) {
             background: rgba(255, 255, 255, 0.1);
         }
 
@@ -382,9 +397,41 @@
             cursor: not-allowed;
         }
 
-        .pagination .page-info {
+        .pagination button.active {
+            background: linear-gradient(135deg, #10b981, #059669);
+            border-color: #10b981;
+            color: white;
+        }
+
+        .pagination .page-ellipsis {
+            color: #64748b;
+            padding: 0 0.25rem;
+        }
+
+        .page-size-selector {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .page-size-selector label {
             color: #94a3b8;
             font-size: 0.85rem;
+        }
+
+        .page-size-selector select {
+            padding: 0.4rem 0.6rem;
+            background: #1a1a2e;
+            border: 1px solid rgba(100, 200, 255, 0.3);
+            border-radius: 4px;
+            color: #e8e8e8;
+            font-size: 0.85rem;
+            cursor: pointer;
+        }
+
+        .page-size-selector select:focus {
+            outline: none;
+            border-color: #10b981;
         }
 
         /* Loading State */
@@ -580,10 +627,22 @@
                 </div>
             </div>
 
-            <div class="pagination" id="pagination" style="display: none;">
-                <button onclick="prevPage()" id="prevBtn">&larr; Zurück</button>
-                <span class="page-info" id="pageInfo">Seite 1</span>
-                <button onclick="nextPage()" id="nextBtn">Weiter &rarr;</button>
+            <div class="pagination-container" id="paginationContainer" style="display: none;">
+                <div class="pagination-info" id="paginationInfo">
+                    Zeige 1-25 von 100 Einträgen
+                </div>
+                <div class="pagination" id="pagination">
+                    <!-- Dynamically generated page buttons -->
+                </div>
+                <div class="page-size-selector">
+                    <label for="pageSize">Pro Seite:</label>
+                    <select id="pageSize" onchange="changePageSize()">
+                        <option value="10">10</option>
+                        <option value="25" selected>25</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                    </select>
+                </div>
             </div>
         </div>
     </div>
@@ -591,26 +650,31 @@
     <script>
         const DATA_SERVICE_URL = '/data';
         const WORKPLACE_URL = '/workplace';
-        const PAGE_SIZE = 25;
 
+        let pageSize = 25;
         let currentPage = 0;
         let totalItems = 0;
+        let totalFilteredItems = 0;
         let symbols = [];
+        let allPredictions = [];  // Cache für Client-side filtering
 
         async function init() {
             // Event-Listener für sofortige Filter-Reaktion
-            document.getElementById('filterSymbol').addEventListener('change', applyFilters);
-            document.getElementById('filterTimeframe').addEventListener('change', applyFilters);
-            document.getElementById('filterDirection').addEventListener('change', applyFilters);
-            document.getElementById('filterEvaluated').addEventListener('change', applyFilters);
-            document.getElementById('filterScore').addEventListener('change', applyFilters);
-            document.getElementById('filterSignals').addEventListener('change', applyFilters);
-            document.getElementById('filterAlignment').addEventListener('change', applyFilters);
+            // Server-side Filter (erfordern API-Reload)
+            document.getElementById('filterSymbol').addEventListener('change', applyServerFilter);
+            document.getElementById('filterTimeframe').addEventListener('change', applyServerFilter);
+            document.getElementById('filterEvaluated').addEventListener('change', applyServerFilter);
+
+            // Client-side Filter (nur lokales Filtern)
+            document.getElementById('filterDirection').addEventListener('change', () => applyFilters(false));
+            document.getElementById('filterScore').addEventListener('change', () => applyFilters(false));
+            document.getElementById('filterSignals').addEventListener('change', () => applyFilters(false));
+            document.getElementById('filterAlignment').addEventListener('change', () => applyFilters(false));
 
             await Promise.all([
                 loadStats(),
                 loadSymbols(),
-                loadPredictions()
+                loadPredictions(true)
             ]);
         }
 
@@ -666,33 +730,37 @@
             }
         }
 
-        async function loadPredictions() {
+        async function loadPredictions(forceReload = false) {
             const content = document.getElementById('journalContent');
             content.innerHTML = `<div class="loading"><div class="loading-spinner"></div><p>Lade Setups...</p></div>`;
 
             try {
-                const params = new URLSearchParams({
-                    service: 'workplace',
-                    limit: PAGE_SIZE,
-                    offset: currentPage * PAGE_SIZE
-                });
+                // Lade alle Predictions (Server-side basic filtering)
+                if (forceReload || allPredictions.length === 0) {
+                    const params = new URLSearchParams({
+                        service: 'workplace',
+                        limit: 2000  // Lade alle für client-side filtering
+                    });
 
-                const symbol = document.getElementById('filterSymbol').value;
-                const timeframe = document.getElementById('filterTimeframe').value;
-                const evaluated = document.getElementById('filterEvaluated').value;
+                    const symbol = document.getElementById('filterSymbol').value;
+                    const timeframe = document.getElementById('filterTimeframe').value;
+                    const evaluated = document.getElementById('filterEvaluated').value;
 
-                if (symbol) params.append('symbol', symbol);
-                if (timeframe) params.append('timeframe', timeframe);
-                if (evaluated === 'evaluated' || evaluated === 'correct' || evaluated === 'incorrect') {
-                    params.append('evaluated_only', 'true');
+                    if (symbol) params.append('symbol', symbol);
+                    if (timeframe) params.append('timeframe', timeframe);
+                    if (evaluated === 'evaluated' || evaluated === 'correct' || evaluated === 'incorrect') {
+                        params.append('evaluated_only', 'true');
+                    }
+
+                    const response = await fetch(`${DATA_SERVICE_URL}/api/v1/predictions/?${params}`);
+                    if (!response.ok) throw new Error('Predictions nicht verfügbar');
+
+                    allPredictions = await response.json();
+                    totalItems = allPredictions.length;
                 }
 
-                const response = await fetch(`${DATA_SERVICE_URL}/api/v1/predictions/?${params}`);
-                if (!response.ok) throw new Error('Predictions nicht verfügbar');
-
-                let predictions = await response.json();
-
                 // Client-side filtering
+                let predictions = [...allPredictions];
                 const direction = document.getElementById('filterDirection').value;
                 const evalFilter = document.getElementById('filterEvaluated').value;
                 const minScore = document.getElementById('filterScore').value;
@@ -739,8 +807,14 @@
                     predictions = predictions.filter(p => p.evaluated_at === null);
                 }
 
-                totalItems = predictions.length;
-                renderPredictions(predictions);
+                totalFilteredItems = predictions.length;
+
+                // Pagination anwenden
+                const startIdx = currentPage * pageSize;
+                const endIdx = startIdx + pageSize;
+                const paginatedPredictions = predictions.slice(startIdx, endIdx);
+
+                renderPredictions(paginatedPredictions);
                 updatePagination();
 
             } catch (e) {
@@ -771,7 +845,7 @@
                 return;
             }
 
-            countEl.textContent = `${predictions.length} Einträge`;
+            countEl.textContent = `${totalFilteredItems} Einträge gesamt`;
 
             let html = `<table class="journal-table">
                 <thead>
@@ -909,37 +983,101 @@
         }
 
         function updatePagination() {
+            const container = document.getElementById('paginationContainer');
             const pagination = document.getElementById('pagination');
-            const pageInfo = document.getElementById('pageInfo');
-            const prevBtn = document.getElementById('prevBtn');
-            const nextBtn = document.getElementById('nextBtn');
+            const paginationInfo = document.getElementById('paginationInfo');
 
-            if (totalItems > PAGE_SIZE) {
-                pagination.style.display = 'flex';
-                const totalPages = Math.ceil(totalItems / PAGE_SIZE);
-                pageInfo.textContent = `Seite ${currentPage + 1} von ${totalPages}`;
-                prevBtn.disabled = currentPage === 0;
-                nextBtn.disabled = currentPage >= totalPages - 1;
-            } else {
-                pagination.style.display = 'none';
+            const totalPages = Math.ceil(totalFilteredItems / pageSize);
+
+            if (totalFilteredItems === 0) {
+                container.style.display = 'none';
+                return;
             }
+
+            container.style.display = 'flex';
+
+            // Info-Text aktualisieren
+            const startItem = currentPage * pageSize + 1;
+            const endItem = Math.min((currentPage + 1) * pageSize, totalFilteredItems);
+            paginationInfo.textContent = `Zeige ${startItem}-${endItem} von ${totalFilteredItems} Einträgen`;
+
+            // Pagination-Buttons generieren
+            let html = '';
+
+            // Zurück-Button
+            html += `<button onclick="goToPage(${currentPage - 1})" ${currentPage === 0 ? 'disabled' : ''}>&laquo;</button>`;
+
+            // Seitenzahlen mit Ellipsis-Logik
+            const maxVisiblePages = 7;
+
+            if (totalPages <= maxVisiblePages) {
+                // Alle Seiten anzeigen
+                for (let i = 0; i < totalPages; i++) {
+                    html += `<button onclick="goToPage(${i})" class="${i === currentPage ? 'active' : ''}">${i + 1}</button>`;
+                }
+            } else {
+                // Erste Seite immer anzeigen
+                html += `<button onclick="goToPage(0)" class="${currentPage === 0 ? 'active' : ''}">1</button>`;
+
+                if (currentPage > 3) {
+                    html += '<span class="page-ellipsis">...</span>';
+                }
+
+                // Mittlere Seiten um aktuelle Position
+                const start = Math.max(1, currentPage - 1);
+                const end = Math.min(totalPages - 2, currentPage + 1);
+
+                for (let i = start; i <= end; i++) {
+                    html += `<button onclick="goToPage(${i})" class="${i === currentPage ? 'active' : ''}">${i + 1}</button>`;
+                }
+
+                if (currentPage < totalPages - 4) {
+                    html += '<span class="page-ellipsis">...</span>';
+                }
+
+                // Letzte Seite immer anzeigen
+                html += `<button onclick="goToPage(${totalPages - 1})" class="${currentPage === totalPages - 1 ? 'active' : ''}">${totalPages}</button>`;
+            }
+
+            // Weiter-Button
+            html += `<button onclick="goToPage(${currentPage + 1})" ${currentPage >= totalPages - 1 ? 'disabled' : ''}>&raquo;</button>`;
+
+            pagination.innerHTML = html;
+        }
+
+        function goToPage(page) {
+            const totalPages = Math.ceil(totalFilteredItems / pageSize);
+            if (page >= 0 && page < totalPages) {
+                currentPage = page;
+                loadPredictions();
+                // Scroll to top of table
+                document.querySelector('.journal-card').scrollIntoView({ behavior: 'smooth' });
+            }
+        }
+
+        function changePageSize() {
+            pageSize = parseInt(document.getElementById('pageSize').value);
+            currentPage = 0;  // Zurück zur ersten Seite
+            loadPredictions();
         }
 
         function prevPage() {
-            if (currentPage > 0) {
-                currentPage--;
-                loadPredictions();
-            }
+            goToPage(currentPage - 1);
         }
 
         function nextPage() {
-            currentPage++;
-            loadPredictions();
+            goToPage(currentPage + 1);
         }
 
-        function applyFilters() {
+        function applyFilters(forceReload = false) {
             currentPage = 0;
-            loadPredictions();
+            loadPredictions(forceReload);
+        }
+
+        // Server-side Filter erfordern Reload
+        function applyServerFilter() {
+            allPredictions = [];  // Cache leeren
+            applyFilters(true);
         }
 
         function resetFilters() {
@@ -951,7 +1089,8 @@
             document.getElementById('filterSignals').value = '';
             document.getElementById('filterAlignment').value = '';
             currentPage = 0;
-            loadPredictions();
+            allPredictions = [];  // Cache leeren
+            loadPredictions(true);
         }
 
         async function cleanupInvalid() {
@@ -974,8 +1113,9 @@
                 alert(`Bereinigung abgeschlossen:\n${result.checked} geprüft\n${result.deleted} gelöscht`);
 
                 // Refresh data
+                allPredictions = [];  // Cache leeren
                 await loadStats();
-                await loadPredictions();
+                await loadPredictions(true);
 
             } catch (e) {
                 alert('Fehler bei Bereinigung: ' + e.message);
@@ -1011,8 +1151,9 @@
                 alert(msg);
 
                 // Refresh data
+                allPredictions = [];  // Cache leeren
                 await loadStats();
-                await loadPredictions();
+                await loadPredictions(true);
 
             } catch (e) {
                 alert('Fehler bei Evaluation: ' + e.message);
